# RogueEngine

./: CMakeLists.txt  LICENSE  compile.bat  first_app.cpp  first_app.hpp  main.cpp
Engine/EngineDevice/: EngineDevice.cpp  EngineDevice.hpp
Engine/Model/: Model.cpp  Model.hpp
Engine/Pipeline/: Pipeline.cpp  Pipeline.hpp
Engine/SwapChain/: SwapChain.cpp  SwapChain.hpp
Engine/WindowHandler/: Window.cpp  Window.hpp
Renderer/EngineDevice/: EngineDevice.cpp  EngineDevice.hpp
Renderer/Model/: Model.cpp  Model.hpp
Renderer/Pipeline/: Pipeline.cpp  Pipeline.hpp
Renderer/SwapChain/: SwapChain.cpp  SwapChain.hpp
Renderer/WindowHandler/: Window.cpp  Window.hpp
compiledShaders/: simple_shader_frag.spv  simple_shader_vert.spv
shaders/: simple_shader.frag  simple_shader.vert
